# runthedev-backend

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
audit-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt
audit-service/app/: __init__.py  ai_classifier.py  ai_reviewer.py  ai_triage.py  fetcher.py  main.py  models.py  parser.py  rules.py  scoring.py
audit-service/docs/: rule_matrix.md
audit-service/scripts/: batch_audit.py  batch_code_audit.py  batch_explain.py  mcp_urls.txt  urls.txt
audit-service/tests/: test_ai_classifier.py  test_ai_reviewer.py  test_code_audit.py  test_fetcher.py  test_marketplace.py  (+3 more)
backend-service/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend-service/migrations/: 001_create_audit_runs.sql  002_harden_audit_runs.sql  003_create_audit_requests.sql
backend-service/src/: config.rs  error.rs  main.rs  state.rs
backend-service/src/jobs/: audit_queue.rs  audit_runner.rs  mod.rs  search_sync.rs
backend-service/src/middleware/: auth.rs  rate_limit.rs
backend-service/src/models/: audit.rs  cli.rs  mod.rs  server.rs  skill.rs
backend-service/src/routes/: admin.rs  cli.rs  mod.rs  search.rs  servers.rs  skills.rs  stats.rs
backend-service/src/search/: mod.rs  query.rs  sync.rs
cli/: Cargo.toml  SPEC.md
cli/src/: lib.rs  main.rs
cli/src/api/: client.rs  types.rs
cli/src/clients/: claude_code.rs  codex.rs  cursor.rs  mod.rs  opencode.rs
cli/src/flow/: check.rs
cli/src/install/: mod.rs  skill.rs  transport.rs  writer.rs
cli/src/ui/: display.rs
(+9 files in other folders)
